Fix steps widget content overflow

--- a/Radzen.Blazor/themes/components/blazor/_steps.scss
+++ b/Radzen.Blazor/themes/components/blazor/_steps.scss
@@ -42,7 +42,8 @@ $steps-button-color: var(--rz-text-secondary-color) !default;
 
   .rz-widget-content {
     flex: 1;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   ul {
